# pokeback

./: .env.template  .gitignore  LICENSE  METHODS.md  README-dev.md  README.md  pyproject.toml
src/: app.py
src/resources/: calculations.py  fetcher.py  updater.py
src/resources/data/: source.json
src/utils/: config.py  constants.py  manage_json.py  paths.py
