[project]
name = "pokeback"
version = "0.1.0"
description = ""
authors = [
    {name = "José Antonio Puntiverio González", email = "joseapunt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "roman (>=5.0,<6.0)",
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
updater = "pokeback.resources.updater:main"

[tool.poetry]
packages = [{ include = "src", from = "pokeback" }]